use correct filename in action

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,4 +34,4 @@ jobs:
       env:
         LOGIN_TOKEN: ${{ secrets.LOGIN_TOKEN }}
       run: |
-        python kicktipp-betbot.py --dry-run --use-login-token "$LOGIN_TOKEN"
+        python ./kicktippbb.py --dry-run --use-login-token "$LOGIN_TOKEN"
